Remove png support from GUI:
pnglib from QT libs conflicts with the one from GLideNHQ lib, and textures load does not work.
Solution: rebuild QT without pnglib.

--- a/GLidenUI/configDialog.ui
+++ b/GLidenUI/configDialog.ui
@@ -430,9 +430,9 @@
             </widget>
            </item>
            <item>
-            <widget class="QRadioButton" name="pngRadioButton">
+            <widget class="QRadioButton" name="bmpRadioButton">
              <property name="text">
-              <string>png</string>
+              <string>bmp</string>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">screenshotButtonGroup</string>
