--- a/GLideNUI/AboutDialog.ui
+++ b/GLideNUI/AboutDialog.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>324</width>
+    <width>400</width>
     <height>520</height>
    </rect>
   </property>
@@ -29,7 +29,7 @@
    <string>About GLideN64</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="icon.qrc">
     <normaloff>:/Icon.png</normaloff>:/Icon.png</iconset>
   </property>
   <property name="modal">
@@ -54,6 +54,9 @@
          <string>Authors</string>
         </property>
         <layout class="QGridLayout" name="gridLayout">
+         <property name="horizontalSpacing">
+          <number>20</number>
+         </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label_3">
            <property name="font">
@@ -116,7 +119,7 @@
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
          <property name="horizontalSpacing">
-          <number>100</number>
+          <number>20</number>
          </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label_5">
@@ -134,7 +137,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Mush Man</string>
+            <string>Anthony Heathcoat</string>
            </property>
           </widget>
          </item>
@@ -154,7 +157,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Funder name</string>
+            <string>Paul Lamb</string>
            </property>
           </widget>
          </item>
@@ -182,7 +185,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Funder name</string>
+            <string>Mush Man</string>
            </property>
           </widget>
          </item>
@@ -420,7 +423,7 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Orkin&lt;/span&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt; - author of original glN64 graphics plugin&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Hiroshi Morii&lt;/span&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt; - author of GlideHQ texture library&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Nathaniel Meyer&lt;/span&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt; - author of the blur shader. Copyright:	Nutty Software&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Nathaniel Meyer&lt;/span&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt; - author of the blur shader. Copyright: Nutty Software&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
@@ -446,7 +449,9 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="icon.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
