--- a/src/GLideNUI/configDialog.ui
+++ b/src/GLideNUI/configDialog.ui
@@ -157,6 +157,16 @@
              </attribute>
             </widget>
            </item>
+           <item>
+            <widget class="QRadioButton" name="aspectAdjustRadioButton">
+             <property name="text">
+              <string>Adjust</string>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">aspectButtonGroup</string>
+             </attribute>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
